print report changes

--- a/Pages/ViewReceivingReport.cshtml
+++ b/Pages/ViewReceivingReport.cshtml
@@ -160,201 +160,98 @@
                 }
                 <table class="nested-table" border="0" width="100%">
                     <tr >
-                       <td style="width: 15%;border: none;" >@Model.lblRecipientSector</td>
-                        <td style="width: 15%;border: none;">@rep.RecipientSector</td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;" align="center">@Model.lblSupplierName</td>
-                        <td style="width: 15%;border: none;">@rep.Supplier?.SupplierName</td>
-                        <td style="width: 15%;border: none;" align="right">@Model.lblSerialNo</td>
-                        <td style="width: 15%;border: none;">@rep.SerialNumber</td>
+                       <td style="width: 15%;border: none; font-size: 14px;white-space: nowrap;" >@Model.lblRecipientSector</td>
+                        <td style="width: 15%;border: none; font-size: 14px;">@rep.RecipientSector</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="center">@Model.lblSupplierName</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">@rep.Supplier?.SupplierName</td>
+                        <td style="width: 15%;border: none;font-size: 14px;" align="right">@Model.lblSerialNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">@rep.SerialNumber</td>
                         
                     </tr>
                     <tr>
-                       <td style="width: 15%;border: none;">@Model.lblSectorNo</td>
-                        <td style="width: 15%;border: none;">@rep.SectorNumber</td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;"  align="right">@Model.lblPageCount</td>
-                        <td style="width: 15%;border: none;"></td>
+                       <td style="width: 15%;border: none;font-size: 14px;">@Model.lblSectorNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">@rep.SectorNumber</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"  align="right">@Model.lblPageCount</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
                         
                     </tr>
                     <tr>
-                        <td style="width: 15%;border: none;" >@Model.lblRecipientWarehouse</td>
-                        <td style="width: 15%;border: none;">@Model.ReceivingWarehouse</td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;"></td>
-                        <td style="width: 15%;border: none;" align="right">@Model.lblDateOfReceipt</td>
-                        <td style="width: 15%;border: none;">@rep.ReceivingDate.ToString("yyyy-MM-dd")</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" >@Model.lblRecipientWarehouse</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">@Model.ReceivingWarehouse</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;"></td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="right">@Model.lblDateOfReceipt</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">@rep.ReceivingDate.ToString("yyyy-MM-dd")</td>
                         
                     </tr>
                     <tr>
-                        <td style="width: 15%;border: none;">@Model.lblBasedOnDocument</td>
-                        <td style="width: 15%;border: none;">@rep.BasedOnDocument</td>
-                        <td style="width: 15%;border: none;" align="center">@Model.lblDocumentNo</td>
-                        <td style="width: 15%;border: none;">@rep.DocumentNumber</td>
-                        <td style="width: 15%;border: none;" align="center">@Model.lblDocumentDate</td>
-                        <td style="width: 15%;border: none;">@rep.DocumentDate.ToString("yyyy-MM-dd")</td>
-                        <td style="width: 15%;border: none;"  align="right">@Model.lblFiscalYear</td>
-                        <td style="width: 15%;border: none;">@rep.FiscalYear</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">@Model.lblBasedOnDocument</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">@rep.BasedOnDocument</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap" align="center">@Model.lblDocumentNo</td>
+                        <td style="width: 15%;border: none;font-size: 14px;;">@rep.DocumentNumber</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;" align="center">@Model.lblDocumentDate</td>
+                        <td style="width: 15%;border: none;font-size: 14px;">@rep.DocumentDate.ToString("yyyy-MM-dd")</td>
+                        <td style="width: 15%;border: none;font-size: 14px;"  align="right">@Model.lblFiscalYear</td>
+                        <td style="width: 15%;border: none;font-size: 14px;white-space: nowrap;">@rep.FiscalYear</td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr>
-            <th style="width: 5%;" rowspan="2">@Model.lblCount</th>
-            <th style="width: 5%;" rowspan="2">@Model.lblItemNo</th>
-            <th style="width: 10%;" rowspan="2">@Model.lblItemNameDescription</th>
-            <th style="width: 3%;" rowspan="2">@Model.lblUnitOfMeasure</th>
-            <th style="width: 3%;" rowspan="2">@Model.lblQuantity</th>
-            <th style="width: 7%;" colspan="2">@Model.lblUnitPrice</th>
-            <th style="width: 7%;" colspan="2">@Model.lblTotalPrice</th>
-            <th style="width: 25%;" rowspan="2">@Model.lblComments</th>
+            <th style="width: 5%;font-size: 14px;" rowspan="2">@Model.lblCount</th>
+            <th style="width: 5%;font-size: 14px;" rowspan="2">@Model.lblItemNo</th>
+            <th style="width: 20%;font-size: 14px;" rowspan="2">@Model.lblItemNameDescription</th>
+            <th style="width: 3%;font-size: 14px;" rowspan="2">@Model.lblUnitOfMeasure</th>
+            <th style="width: 3%;font-size: 14px;" rowspan="2">@Model.lblQuantity</th>
+            <th style="width: 7%;font-size: 14px;" colspan="2">@Model.lblUnitPrice</th>
+            <th style="width: 7%;font-size: 14px;" colspan="2">@Model.lblTotalPrice</th>
+            <th style="width: 25%;font-size: 14px;" rowspan="2">@Model.lblComments</th>
         </tr>
         <tr>
-            <td style="width: 3.5%; text-align: center;"></td>
-            <td style="width: 3.5%; text-align: center;">@Model.lblSAR</td>
-            <td style="width: 3.5%; text-align: center;"></td>
-            <td style="width: 3.5%; text-align: center;">@Model.lblSAR</td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;"></td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;">@Model.lblSAR</td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;"></td>
+            <td style="width: 3.5%;font-size: 14px; text-align: center;">@Model.lblSAR</td>
         </tr>
         @foreach(var item in Model.ReceivingItems){
             var Item = Model.Items.FirstOrDefault(i => i.ItemId == item.ItemId);      
             var UnitMeasure = Model.Units.FirstOrDefault(u => u.Id == Item.UnitId).UnitCode ?? "";;
             <tr>
-                <td>&nbsp;</td>
-                <td>@Item.ItemCode</td>
-                <td>@Item.ItemName- @Item.ItemDescription</td>
-                <td>@UnitMeasure</td>
-                <td>@item.Quantity</td>
-                <td></td>
-                <td>@item.UnitPrice</td>
-                <td>&nbsp;</td>
-                <td>@(item.Quantity * item.UnitPrice)</td>
-                <td>@item.Comments</td>
+                <td style="font-size: 14px;">&nbsp;</td>
+                <td style="font-size: 14px;">@Item.ItemCode</td>
+                <td style="font-size: 14px;">@Item.ItemName- @Item.ItemDescription</td>
+                <td style="font-size: 14px;">@UnitMeasure</td>
+                <td style="font-size: 14px;">@item.Quantity</td>
+                <td style="font-size: 14px;"></td>
+                <td style="font-size: 14px;">@item.UnitPrice</td>
+                <td style="font-size: 14px;">&nbsp;</td>
+                <td style="font-size: 14px;">@(item.Quantity * item.UnitPrice)</td>
+                <td style="font-size: 14px;">@item.Comments</td>
 
             </tr>
         }
         <tr>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td>&nbsp;</td>
-            <td colspan="7">@Model.lblTotalPrice</td>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td style="font-size: 14px;">&nbsp;</td>
+            <td colspan="7" >@Model.lblTotalPrice</td>
         </tr>
-
-       
-       
-      
-       
         <tr>
-            <td colspan="4" style="text-align: center;"><b>@Model.lblTechnicalMember</b></td>
-            <td colspan="3" style="text-align: center;"><b>@Model.lblRecipient</b></td>
-            <td colspan="2" style=" text-align: center;"><b>@Model.lblChiefResponsible</b></td>
-
+            <td colspan="2" style="text-align: center;font-size: 14px;"><b>@Model.lblRecipient</b></td>
+            <td colspan="2.5" style="text-align: center;font-size: 14px;"><b>@Model.lblTechnicalMember</b></td>
+            <td colspan="5" style="text-align: center;font-size: 14px;"><b>@Model.lblChiefResponsible</b></td>
             <td>&nbsp;</td>
         </tr>
         <tr>
-            <td rowspan="2" colspan="4" style="text-align: center;"></td>
-            <td colspan="3">&nbsp;</td>
-            <td colspan="2">&nbsp;</td>
-            <td style=" text-align: center;">@Model.lblName<br>@Model.lblSignature<br>@Model.lblDate</td>
+            <td rowspan="2" colspan="2" style="text-align: center;font-size: 14px;"></td>
+            <td colspan="2.5"></td>
+            <td colspan="5"></td>
+            <td style=" text-align: center;font-size: 14px;">@Model.lblName<br>@Model.lblSignature<br>@Model.lblDate</td>
         </tr>
     </table>
 </div>
-
-@* <div id="printArea" style="display: none;">
-     <h2 style="text-align: center;">Receiving Report</h2>
-
-  <!-- Header Section -->
-  <table style="width: 100%; border: 1px solid #000; border-collapse: collapse; margin-bottom: 10px;">
-    <tr>
-      <td style="border: 1px solid #000; padding: 6px;">Serial Number</td>
-      <td style="border: 1px solid #000; padding: 6px;">Pages Count</td>
-      <td style="border: 1px solid #000; padding: 6px;">Date of Receipt</td>
-      <td style="border: 1px solid #000; padding: 6px;">Fiscal Year</td>
-    </tr>
-    <tr>
-      <td style="border: 1px solid #000; padding: 6px;">Supplier Name</td>
-      <td style="border: 1px solid #000; padding: 6px;">Receiving Warehouse</td>
-      <td style="border: 1px solid #000; padding: 6px;">Recipient Sector</td>
-      <td style="border: 1px solid #000; padding: 6px;">Sector Number</td>
-    </tr>
-    <tr>
-      <td style="border: 1px solid #000; padding: 6px;">Document Date</td>
-      <td style="border: 1px solid #000; padding: 6px;">Document No.</td>
-      <td style="border: 1px solid #000; padding: 6px;">Based on Document</td>
-      <td style="border: 1px solid #000; padding: 6px;"></td>
-    </tr>
-  </table>
-
-  <!-- Items Table -->
-  <table style="width: 100%; border-collapse: collapse;" class="table table-bordered">
-    <thead class="table-secondary">
-      <tr>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Count</th>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Item No.</th>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Item Name / Description*</th>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Unit of Measure</th>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Quantity</th>
-        <th colspan="2" style="border: 1px solid #000; padding: 6px;">Unit Price</th>
-        <th colspan="2" style="border: 1px solid #000; padding: 6px;">Total Price</th>
-        <th rowspan="2" style="border: 1px solid #000; padding: 6px;">Comments</th>
-      </tr>
-      <tr>
-        <th style="border: 1px solid #000; padding: 6px;">هـ</th>
-        <th style="border: 1px solid #000; padding: 6px;">ر.س</th>
-        <th style="border: 1px solid #000; padding: 6px;">هـ</th>
-        <th style="border: 1px solid #000; padding: 6px;">ر.س</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td style="border: 1px solid #000; padding: 6px;">1</td>
-        <td style="border: 1px solid #000; padding: 6px;">123456</td>
-        <td style="border: 1px solid #000; padding: 6px;">ميزان حرارة</td>
-        <td style="border: 1px solid #000; padding: 6px;">علبة</td>
-        <td style="border: 1px solid #000; padding: 6px;">20</td>
-        <td style="border: 1px solid #000; padding: 6px;">5</td>
-        <td style="border: 1px solid #000; padding: 6px;">10</td>
-        <td style="border: 1px solid #000; padding: 6px;">100</td>
-        <td style="border: 1px solid #000; padding: 6px;">200</td>
-        <td style="border: 1px solid #000; padding: 6px;">جيد</td>
-      </tr>
-      <!-- Additional rows can be added here -->
-    </tbody>
-  </table>
-
-  <!-- Total Price Row -->
-  <div style="margin-top: 10px; font-weight: bold;">
-    القيمة الإجمالية - Total Price:
-  </div>
-
-  <!-- Footer Section -->
-  <table style="width: 100%; border-collapse: collapse; margin-top: 20px;">
-    <tr>
-      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
-        رئيس المسؤول<br>Chief Responsible<br><br>......................
-      </td>
-      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
-        العضو الفني<br>Technical Member*<br><br>......................
-      </td>
-      <td style="border: 1px solid #000; text-align: center; padding: 10px;">
-        المستلم<br>Recipient<br><br>......................
-      </td>
-    </tr>
-  </table>
-
-  <!-- Approval Note -->
-  <div style="text-align: center; margin-top: 15px; font-weight: bold; color: green;">
-    معتمد - Approved
-  </div>
-
-  <!-- Signature and Date -->
-  <div style="margin-top: 10px;">
-    الاسم: _____________ <br>
-    التوقيع: _____________ <br>
-    التاريخ: _____________ <br>
-    Name, Signature, Date (of approval)
-  </div>
-
-</div> *@
